2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst-libs/gst/play/play.c: (gst_play_set_location),
	(gst_play_set_data_src), (gst_play_set_video_sink),
	(gst_play_set_audio_sink), (gst_play_set_visualization),
	(gst_play_connect_visualization), (gst_play_get_framerate):
	  use a macro to look up elements from hash table

2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst-libs/gst/play/play.c: (gst_play_pipeline_setup),
	(gst_play_get_length_callback), (gst_play_set_location),
	(gst_play_seek_to_time), (gst_play_set_data_src),
	(gst_play_set_video_sink), (gst_play_set_audio_sink),
	(gst_play_set_visualization), (gst_play_connect_visualization),
	(gst_play_get_sink_element):
	- add debugging info
	- fix looking up sink elements by iterating over complete caps
	- put everything except for source and autoplugger in a complete bin

2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* ext/alsa/gstalsa.c: (gst_alsa_drain_audio):
	* ext/alsa/gstalsasink.c: (gst_alsa_sink_flush_one_pad),
	(gst_alsa_sink_check_event), (gst_alsa_sink_mmap),
	(gst_alsa_sink_write), (gst_alsa_sink_loop):
	* ext/alsa/gstalsasink.h:
	- add debugging info
	- clean up schizophrenia of data/buffer/event
	- fix double event unref error

2004-07-08  Wim Taymans  <wim@fluendo.com>

	* gst/playback/Makefile.am:
	Add headers to noinst

2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* tools/gst-launch-ext-m.m:
	* tools/gst-launch-ext.1.in:
	  convert to the third millenium

2004-07-07  David Schleef  <ds@schleef.org>

	* sys/dxr3/Makefile.am: noinst_SOURCES should be nodist_SOURCES

2004-07-07  Wim Taymans  <wim@fluendo.com>

	* gst/playback/Makefile.am:
	* gst/playback/README:
	* gst/playback/gstdecodebin.c: (gst_decode_bin_get_type),
	(gst_decode_bin_class_init), (gst_decode_bin_factory_filter),
	(compare_ranks), (print_feature), (gst_decode_bin_init),